--- a/src/projetolfa/Interface/IUExpressaoR.form
+++ b/src/projetolfa/Interface/IUExpressaoR.form
@@ -69,6 +69,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtExpressao">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtExpressaoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
